Fixed spacing issues

--- a/src/SCSS/_base.scss
+++ b/src/SCSS/_base.scss
@@ -14,10 +14,6 @@ html {
     background: theme.$yellow;
   }
 
-  .spacer {
-    width: 100vw;
-    height: 10px
-  }
   
   html,
   body {
