--- a/src/SCSS/_contactButton.scss
+++ b/src/SCSS/_contactButton.scss
@@ -1,58 +1,114 @@
-cb-container {
-    background: linear-gradient(135deg, rgba(85,239,203,1) 0%,rgba(30,87,153,1) 0%,rgba(85,239,203,1) 0%,rgba(91,202,255,1) 100%);
-    color: #f7f7f7;
-    font-family: 'Lato', sans-serif;
-    font-weight: 300;
+@import url('https://fonts.googleapis.com/css?family=Mukta:700');
+
+$bg: #f3f8fa;
+$white: #fff;
+$black: #282936;
+
+@mixin transition($property: all, $duration: 0.45s, $ease: cubic-bezier(0.65,0,.076,1)) {
+  transition: $property $duration $ease;
+}
+
+* {
+  box-sizing: border-box;
+  &::before, &::after {
+    box-sizing: border-box;
   }
-  .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    flex-wrap: wrap;
-    width: 60vw;
-    max-width: 1200px;
-    margin: 0 auto;
-    min-height: 100vh;
-  }
-  .button {
-    flex: 1 1 auto;
-    margin: 10px;
-    padding: 20px;
-    border: 2px solid #f7f7f7;
-    text-align: center;
-    text-transform: uppercase;
-    position: relative;
-    overflow:hidden;
-    transition: .3s;
-    &:after {
+}
+
+cb-body {
+  font-family: 'Mukta', sans-serif;
+  font-size: 1rem;
+  line-height: 1.5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  min-height: 100vh;
+  background: $bg;
+}
+
+button {
+  position: fixed;
+  top: 200px;
+  left:200px;
+  display: inline-block;
+  cursor: pointer;
+  outline: none;
+  border: 0;
+  vertical-align: middle;
+  text-decoration: none;
+  background: transparent;
+  padding: 0;
+  font-size: inherit;
+  font-family: inherit;
+  &.learn-more {
+    width: 12rem;
+    height: auto;
+    .circle {
+      @include transition(all, 0.45s, cubic-bezier(0.65,0,.076,1));
+      position: relative;
+      display: block;
+      margin: 0;
+      width: 3rem;
+      height: 3rem;
+      background: $black;
+      border-radius: 1.625rem;
+      .icon {
+        @include transition(all, 0.45s, cubic-bezier(0.65,0,.076,1));
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        background: $white;
+        &.arrow {
+          @include transition(all, 0.45s, cubic-bezier(0.65,0,.076,1));
+          left: 0.625rem;
+          width: 1.125rem;
+          height: 0.125rem;
+          background: none;
+          &::before {
+            position: absolute;
+            content: '';
+            top: -0.25rem;
+            right: 0.0625rem;
+            width: 0.625rem;
+            height: 0.625rem;
+            border-top: 0.125rem solid #fff;
+            border-right: 0.125rem solid #fff;
+            transform: rotate(45deg);
+          }
+        }
+      }
+    }
+    .button-text {
+      @include transition(all, 0.45s, cubic-bezier(0.65,0,.076,1));
       position: absolute;
-      transition: .3s;
-      content: '';
-      width: 0;
-      left: 50%;
+      top: 0;
+      left: 0;
+      right: 0;
       bottom: 0;
-      height: 3px;
-      background: #f7f7f7;
-    }
-    &:nth-of-type(1):after {
-      height: 120%;
-      left: -10%;
-      transform: skewX(15deg);
-      z-index: -1;
-    }
-    &:hover {
-      cursor: pointer;
-      &:after {
-        width: 100%;
-        left: 0;
-      }
-      &:nth-of-type(1) {
-        color: #5bcaff;
-      }
-      &:nth-of-type(1):after {
-        left: -10%;
-        width: 120%;
-      }
+      padding: 0.75rem 0;
+      margin: 0 0 0 1.85rem;
+      color: #FF2C75;
+      font-weight: 700;
+      line-height: 1.6;
+      text-align: center;
+      text-transform: uppercase;
     }
   }
+  &:hover {
+    .circle {
+      width: 100%;
+      .icon {
+        &.arrow {
+        background: $white;
+        transform: translate(1rem, 0);
+        }
+      }
+    }
+    .button-text {
+      color: $white;
+    }
+  }
+}
+
